# poc-data-engineering-coding-challenge

./: .env  .gitignore  .sqlfluff  CONTRIBUTING.md  DATA-123.md  DATA-123.md.tmpl  Makefile  README.md  dbt_project.yml  profiles.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
docs/designs/: 2024-Q3-orders-redesign.md  refund-modeling.md
docs/interviewer/: README.md  _answer_key.py  answer-key.md  interviewer.md  pr-grading-rubric.md  stakeholder-brief-jamie.md  technical-interview-design.md
macros/: get_incremental_value.sql
models/merchants/base/: base_merchants.sql  base_products.sql
models/merchants/lookup/: lkp_merchants.sql  lkp_products.sql
models/merchants/staging/: merchants_staging.yml  stg_merchants.sql  stg_products.sql
models/orders/base/: base_line_items.sql  base_orders.sql  base_shipment_line_items.sql  base_shipments.sql  orders_base.yml
models/orders/dw/: order_fact.sql  order_line_fact.sql  orders_dw.md  orders_dw.yml
models/orders/staging/: orders_staging.yml  stg_line_items.sql  stg_orders.sql  stg_shipment_line_items.sql  stg_shipments.sql
setup/: README.md  generate.py
tests/: order_fact_revenue_reconciliation.sql
