[project]
name = "principal-de-interview"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dbt-duckdb>=1.7",
    "duckdb>=0.10",
    "faker>=24.0",
    "jinja2>=3.1",
    "pandas>=2.0",
]

[dependency-groups]
dev = [
    "sqlfluff>=3.0",
    "sqlfluff-templater-dbt>=3.0",
]
